# kwite

./: .gitignore  Cargo.toml  ENHANCEMENT_SUMMARY.md  FEATURES.md  LICENSE  PACKAGING.md  README.md  libconstants.rlib
.github/: copilot-instructions.md
.github/workflows/: rust.yml
assets/: icon-readme.md  kwite.desktop
benches/: ai_benchmarks.rs  audio_performance.rs
installer/: README.md  build-installers.sh
src/: ai_metrics.rs  auto_update.rs  config.rs  constants.rs  lib.rs  logger.rs  main.rs  remote_logging.rs  system_info.rs  usage_stats.rs  virtual_audio.rs
src/audio/: analysis.rs  capture.rs  devices.rs  mod.rs  models.rs  output.rs  pipeline.rs  process.rs  resampling.rs
src/gui/: app.rs
tests/: README.md  ai_processing_tests.rs  cross_platform_tests.rs  device_tests.rs  error_handling_tests.rs  integration_tests.rs  unit_audio_devices.rs  unit_config.rs  unit_logger.rs
